<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="30dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:id="@+id/full_screen_content"
    android:paddingTop="30dp"
    android:background="@drawable/layer_3">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="28dp"
        tools:layout_editor_absoluteY="38dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="20dp"
            android:orientation="vertical"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="top"
                android:layout_gravity="top"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="65dp"
                    android:layout_marginTop="50dp"
                    android:gravity="center|center_vertical"
                    android:text="@string/welcome"
                    android:textAllCaps="false"
                    android:paddingLeft="40dp"
                    android:paddingEnd="5dp"
                    android:textColor="#fff"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:gravity="center"
                    android:text="@string/disciple_maker"
                    android:textAllCaps="false"
                    android:textColor="#67e1ff"
                    android:textSize="20sp" />
            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center_horizontal"
                android:text="@string/questions_discovery_process"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center_horizontal"
                android:text="@string/coaching_tips"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center_horizontal"
                android:text="@string/bible_passages"
                android:layout_marginBottom="50dp"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="14sp" />


            <Button
                android:id="@+id/discover"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/rectangle_3"
                android:padding="16dp"
                android:text="@string/discover_button"
                android:textAllCaps="true"
                android:textColor="#fff"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:visibility="invisible"
                android:text="@string/create_new_account"
                android:textAllCaps="true"
                android:textColor="#fff"
                android:textSize="12sp" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>